--- a/app/src/main/res/layout/activity_coupon_search.xml
+++ b/app/src/main/res/layout/activity_coupon_search.xml
@@ -95,7 +95,8 @@
                 android:layout_marginLeft="50dp"
                 android:layout_weight="1"
                 android:lineSpacingExtra="25sp"
-                android:text="사용할 포인트를 입력하세요."
+                android:textColorHint="#ffffff"
+                android:hint="사용할 포인트를 입력하세요."
                 android:textColor="#ffffff"
                 android:textSize="10sp" />
             
