--- a/app/src/main/res/layout/activity_message_coupon_management.xml
+++ b/app/src/main/res/layout/activity_message_coupon_management.xml
@@ -25,6 +25,11 @@
                 android:textColor="#ffff"
                 android:textSize="24dp" />
 
+            <LinearLayout
+                android:id="@+id/messageLL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 <LinearLayout
     android:layout_marginTop="17.5dp"
     android:layout_width="wrap_content"
@@ -62,6 +67,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.3dp"
                     android:background="#ffff"/>
+            </LinearLayout>
             </LinearLayout>
 
 
