--- a/app/src/main/res/layout/activity_point_list.xml
+++ b/app/src/main/res/layout/activity_point_list.xml
@@ -25,6 +25,12 @@
                 android:textColor="#ffff"
                 android:textSize="24dp" />
 
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:id="@+id/point_op_LL">
+
 <LinearLayout
     android:layout_marginTop="17.5dp"
     android:layout_width="wrap_content"
@@ -104,7 +110,7 @@
 
 
             </LinearLayout>
-
+            </LinearLayout>
 
         </LinearLayout>
 
