--- a/app/src/main/res/layout/activity_user_visit_analysis.xml
+++ b/app/src/main/res/layout/activity_user_visit_analysis.xml
@@ -25,6 +25,13 @@
                 android:textColor="#ffff"
                 android:textSize="24dp" />
 
+            <LinearLayout
+                android:id="@+id/uservisit_op_LL"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+
 <LinearLayout
     android:layout_marginTop="17.5dp"
     android:layout_width="wrap_content"
@@ -104,7 +111,7 @@
 
 
             </LinearLayout>
-
+            </LinearLayout>
 
         </LinearLayout>
 
