--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,12 +33,14 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:orientation="horizontal">
-            <EditText
+            <TextView
+                android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="0.6"
+                android:text="스타벅스 홍대점"
                 android:layout_height="match_parent"
                 android:background="#ffff">
-            </EditText>
+            </TextView>
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_weight="0.4"
