--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -27,6 +27,7 @@
                 android:layout_weight="0.2">
                 <TextView
                     android:id="@+id/phoneTV"
+                    android:inputType="phone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="21sp"
