--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/pointTV"
+                    android:id="@+id/use_pointTV"
                     android:layout_marginTop="8.5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,7 +50,7 @@
                     android:letterSpacing="-0.03"
                     android:lineSpacingExtra="8sp"
                     android:gravity="end"
-                    android:text="1,000"
+                    android:text="500"
                     />
                     <TextView
                         android:layout_marginTop="8.5dp"
@@ -343,7 +343,13 @@
                     android:lineSpacingExtra="1sp"
                     android:text="내포인트"
                     />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/pointTV"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -352,8 +358,19 @@
                     android:textColor="#303030"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-9sp"
-                    android:text="3,000 P"
+                    android:text="3000"
                     />
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textColor="#303030"
+                        android:letterSpacing="-0.05"
+                        android:lineSpacingExtra="-9sp"
+                        android:text="P"
+                        />
+                </LinearLayout>
                 <View
                     android:layout_marginTop="10dp"
                     android:layout_width="match_parent"
@@ -370,7 +387,12 @@
                     android:lineSpacingExtra="1sp"
                     android:text="남은 포인트"
                     />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
                 <TextView
+                    android:id="@+id/left_pointTV"
                     android:layout_marginTop="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -379,9 +401,19 @@
                     android:textColor="#666666"
                     android:letterSpacing="-0.05"
                     android:lineSpacingExtra="-9sp"
-                    android:text="2,000 P"
+                    android:text="2000"
                     />
-
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="18sp"
+                        android:textColor="#666666"
+                        android:letterSpacing="-0.05"
+                        android:lineSpacingExtra="-9sp"
+                        android:text="P"
+                        />
+                </LinearLayout>
 
             </LinearLayout>
 
