--- a/app/src/main/res/layout/fra_point_accumulate.xml
+++ b/app/src/main/res/layout/fra_point_accumulate.xml
@@ -19,6 +19,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/pointTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -29,6 +30,7 @@
                 android:textSize="50dp" />
 
             <TextView
+                android:id="@+id/titleTV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -55,6 +57,7 @@
                     android:textSize="20sp" />
 
                 <TextView
+                    android:id="@+id/left_pointTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
