--- a/app/src/main/res/drawable/background_gradient.xml
+++ b/app/src/main/res/drawable/background_gradient.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="#005bee"
-        android:centerColor="#00c7fd"
-        android:endColor="#00c7fd"
+        android:startColor="#0977c9"
+        android:centerColor="#479edf"
+        android:endColor="#479edf"
         android:angle="45"
         android:centerY="1" />
     <corners
