--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentTop="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:background="@mipmap/intro_logo">
 
     </LinearLayout>
@@ -34,6 +35,7 @@
             android:layout_height="40dp"
             android:orientation="horizontal">
             <TextView
+                android:id="@+id/storeNameTV"
                 android:gravity="center"
                 android:layout_width="0dp"
                 android:layout_weight="0.6"
