--- a/app/src/main/res/layout/fra_coupon.xml
+++ b/app/src/main/res/layout/fra_coupon.xml
@@ -417,7 +417,10 @@
 
             </LinearLayout>
 
-
+            <ListView
+                android:id="@+id/couponListLV"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
 
         </LinearLayout>
