--- a/app/src/main/res/layout/item_member_coupon.xml
+++ b/app/src/main/res/layout/item_member_coupon.xml
@@ -1,91 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="250dp"
-    android:layout_height="wrap_content" android:padding="5dp" android:background="@mipmap/coupon" >
+    android:orientation="vertical" android:layout_width="135dp"
+    android:layout_height="45dp" android:padding="5dp" android:layout_margin="5dp" >
 
+    <LinearLayout
+        android:id="@+id/couponBackLL"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
         <TextView
             android:id="@+id/item_couponNameTV"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textSize="18sp"
-            android:textColor="#000099"
+            android:layout_marginBottom="3.5dp"
+            android:layout_marginRight="5dp"
+            android:lineSpacingExtra="3sp"
+            android:layout_gravity="right"
+            android:textSize="9sp"
+            android:textColor="#333333"
             android:text="쿠폰이름"
             android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/item_couponTypeTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_weight="3"
-        android:textSize="12sp"
-        android:textColor="#090909"
-        android:text="쿠폰타입"
-        android:textStyle="bold" />
-    <TextView
-        android:id="@+id/item_messageTV"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="15sp"
-        android:textColor="#666666"
-        android:text="메세지"
-        android:textStyle="bold" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#979797"
-            android:textSize="11sp"
-            android:text="사용 가능 요일 :"/>
+            android:layout_gravity="right"
+            android:layout_marginBottom="3dp"
+            android:layout_marginRight="5dp">
+            <TextView
+                android:id="@+id/item_s_validityTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="7sp"
+                android:textColor="#595959"
+                android:letterSpacing="-0.24"
+                android:text="2018-11-29"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="~"
+                android:textColor="#595959"
+                android:textSize="7sp"
+                android:letterSpacing="-0.02"/>
+            <TextView
+                android:id="@+id/item_e_validityTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="7sp"
+                android:letterSpacing="-0.02"
+                android:textColor="#595959"
+                android:text="2018-12-31"/>
+        </LinearLayout>
         <TextView
-            android:id="@+id/item_weekTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="주중"
-            android:textSize="11sp"
-            android:visibility="gone"
-            android:textStyle="bold" />
-        <TextView
-            android:id="@+id/item_satTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textSize="11sp"
-            android:textStyle="bold"
-            android:textColor="#0066b0"
-            android:visibility="gone"
-            android:text="토"/>
-        <TextView
-            android:id="@+id/item_sunTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:textSize="11sp"
-            android:textStyle="bold"
-            android:textColor="#ff0066"
-            android:visibility="gone"
-            android:text="일"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
+            android:id="@+id/item_messageTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:textSize="13sp"
-            android:letterSpacing="-0.24"
-            android:text="유효기간 :"/>
-        <TextView
-            android:id="@+id/item_validityTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="13sp"
-            android:textColor="#ff0000"
-            android:text="2018-12-31"/>
+            android:layout_gravity="right"
+            android:textSize="6sp"
+            android:textColor="#595959"
+            android:text="메세지" />
     </LinearLayout>
+
 </LinearLayout>
