--- a/app/src/main/res/layout/fra_use.xml
+++ b/app/src/main/res/layout/fra_use.xml
@@ -386,14 +386,79 @@
 
             </RelativeLayout>
 
+            <LinearLayout
+                android:id="@+id/myPointLL"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="gone">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingTop="10dp"
+                    android:paddingBottom="10dp"
+                    android:layout_marginLeft="9.5dp"
+                    android:layout_marginTop="10dp"
+                    android:orientation="vertical"
+                    android:background="#ffff"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="8sp"
+                        android:layout_marginLeft="10dp"
+                        android:textColor="#cbcbcb"
+                        android:letterSpacing="-0.05"
+                        android:lineSpacingExtra="1sp"
+                        android:text="내포인트"
+                        />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/pointTV"
+                            android:layout_marginTop="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:layout_marginLeft="10dp"
+                            android:textColor="#303030"
+                            android:letterSpacing="-0.05"
+                            android:lineSpacingExtra="-9sp"
+                            android:text="0"
+                            />
+
+                        <TextView
+                            android:layout_marginTop="10dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="18sp"
+                            android:textColor="#303030"
+                            android:letterSpacing="-0.05"
+                            android:lineSpacingExtra="-9sp"
+                            android:text="P"
+                            />
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <ListView
+                    android:id="@+id/couponListLV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                </ListView>
+
+            </LinearLayout>
 
         </LinearLayout>
 
-
-
     </LinearLayout>
-
-
-
 
 </LinearLayout>
